--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>我的博客</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://gravatar.azure.cc/static/lib/fontawesome5pro/css/all.min.css?v=1.5.8">
+    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+    <script>
+        // Tailwind CSS Dark Mode Config
+        tailwind.config = {
+            darkMode: 'class',
+        }
+    </script>
     <style>
         html { scroll-behavior: smooth; }
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
@@ -13,7 +21,6 @@
         .dark .content-area a { color: #60a5fa; }
         .content-area h1, .content-area h2, .content-area h3 { font-weight: 600; margin-top: 1.5em; margin-bottom: 0.5em; border: none; padding: 0;}
         .loader { border: 4px solid #f3f3f3; border-top: 4px solid #3498db; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; }
-        .dark .loader { border-color: #4b5563; border-top-color: #60a5fa;}
         #back-to-top { position: fixed; bottom: 2rem; right: 2rem; display: none; }
         .group .dropdown-menu { display: none; }
         .group:hover .dropdown-menu { display: block; }
@@ -23,9 +30,9 @@
         .rounded-lg { border-radius: 0.3rem !important; }
         .rounded-md { border-radius: 0.1rem !important; }
         .py-8 { padding-top: 1.5rem !important; padding-bottom: 1.8rem !important; }
-        .border-gray-200 { border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; }
+        .border-gray-200 { border-color: rgb(245 245 245 / 1) !important; }
         .dark .dark\:divide-gray-700 > :not([hidden]) ~ :not([hidden]),
-        .dark .dark\:border-gray-700 { border-color: rgb(31 41 55 / var(--tw-border-opacity, 1)) !important; }
+        .dark .dark\:border-gray-700 { border-color: rgb(31 41 55 / 1) !important; }
         body {
             background-color: #f5f5f5;
             transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
@@ -34,9 +41,6 @@
         }
         .dark body { background-color: #111827; }
     </style>
-    <script>
-        tailwind.config = { darkMode: 'class' }
-    </script>
 </head>
 <body class="text-gray-800 dark:text-gray-200">
 
@@ -49,12 +53,12 @@
     <script>
         const App = {
             config: {
-                workerUrl: 'https://blog.xy193.workers.dev' // 请替换为您的 Worker URL
+                workerUrl: 'https://blog.xy193.workers.dev'
             },
             state: {
                 posts: [], navItems: [], tags: [], categories: {}, recentPosts: [],
                 friendlyLinks: [], recentComments: [], siteStats: null, comments: {}, 
-                theme: localStorage.getItem('theme') || 'light', carouselInterval: null
+                theme: localStorage.getItem('theme') || 'light', carouselInterval: null, carouselSettings: null
             },
             init() {
                 this.applyTheme();
@@ -77,21 +81,37 @@
                 const container = document.getElementById('carousel-container');
                 if (!container) return;
                 if (this.state.carouselInterval) clearInterval(this.state.carouselInterval);
+                const settings = this.state.carouselSettings || { transition: 'fade', speed: 700, delay: 5000 };
+                container.style.setProperty('--carousel-speed', `${settings.speed}ms`);
                 let currentSlide = 0;
                 const slides = container.querySelectorAll('.carousel-slide');
                 const dots = container.querySelectorAll('.carousel-dot');
                 const totalSlides = slides.length;
-                if (totalSlides === 0) return;
-                const showSlide = (index) => {
-                    slides.forEach((s, i) => { s.style.opacity = i === index ? '1' : '0'; });
-                    dots.forEach((d, i) => { d.classList.toggle('bg-white', i === index); d.classList.toggle('bg-white/50', i !== index); });
-                    currentSlide = index;
+                if (totalSlides <= 1) return;
+                const showSlide = (newIndex, direction = 1) => {
+                    const oldIndex = currentSlide;
+                    if (newIndex === oldIndex) return;
+                    slides.forEach((s, i) => s.style.zIndex = (i === oldIndex) ? '10' : '5');
+                    const newSlide = slides[newIndex];
+                    newSlide.style.zIndex = '20';
+                    dots.forEach((d, i) => { d.classList.toggle('bg-white', i === newIndex); d.classList.toggle('bg-white/50', i !== newIndex);});
+                    if (settings.transition === 'fade') {
+                        newSlide.style.opacity = '0';
+                        requestAnimationFrame(() => { newSlide.style.opacity = '1'; });
+                    } else if (settings.transition === 'slide-x') {
+                        newSlide.style.transform = `translateX(${100 * direction}%)`;
+                        requestAnimationFrame(() => { slides[oldIndex].style.transform = `translateX(${-100 * direction}%)`; newSlide.style.transform = 'translateX(0%)'; });
+                    } else if (settings.transition === 'slide-y') {
+                         newSlide.style.transform = `translateY(${100 * direction}%)`;
+                        requestAnimationFrame(() => { slides[oldIndex].style.transform = `translateY(${-100 * direction}%)`; newSlide.style.transform = 'translateY(0%)'; });
+                    }
+                    currentSlide = newIndex;
                 };
-                const next = () => showSlide((currentSlide + 1) % totalSlides);
+                const next = () => showSlide((currentSlide + 1) % totalSlides, 1);
                 document.getElementById('carousel-next')?.addEventListener('click', next);
-                document.getElementById('carousel-prev')?.addEventListener('click', () => showSlide((currentSlide - 1 + totalSlides) % totalSlides));
-                dots.forEach(d => d.addEventListener('click', () => showSlide(parseInt(d.dataset.slideTo))));
-                this.state.carouselInterval = setInterval(next, 5000);
+                document.getElementById('carousel-prev')?.addEventListener('click', () => showSlide((currentSlide - 1 + totalSlides) % totalSlides, -1));
+                dots.forEach(d => d.addEventListener('click', () => showSlide(parseInt(d.dataset.slideTo), parseInt(d.dataset.slideTo) > currentSlide ? 1 : -1)));
+                this.state.carouselInterval = setInterval(next, settings.delay);
             },
             handleScroll() {
                 const btn = document.getElementById('back-to-top');
@@ -105,7 +125,7 @@
                 app.innerHTML = App.templates.loader();
                 const path = window.location.hash.slice(1) || '/';
                 const parts = path.split('/');
-                await Promise.all([ App.fetchNavIfNeeded(), App.fetchTagsIfNeeded(), App.fetchFriendlyLinksIfNeeded(), App.fetchRecentCommentsIfNeeded(), App.fetchSiteStatsIfNeeded() ]);
+                await Promise.all([ App.fetchNavIfNeeded(), App.fetchTagsIfNeeded(), App.fetchFriendlyLinksIfNeeded(), App.fetchRecentCommentsIfNeeded(), App.fetchSiteStatsIfNeeded(), App.fetchCarouselSettingsIfNeeded() ]);
                 await App.fetchDataIfNeeded();
                 
                 let contentHtml = '';
@@ -147,6 +167,7 @@
             fetchSinglePost: async (slug) => { try { const r = await fetch(`${App.config.workerUrl}/api/posts/${slug}`); if (!r.ok) return null; return await r.json(); } catch (e) { return null; } },
             fetchSiteStatsIfNeeded: async () => { if (!App.state.siteStats) try { const r = await fetch(`${App.config.workerUrl}/api/stats`); App.state.siteStats = await r.json(); } catch (e) {} },
             fetchSearchResults: async (q) => { try { const r = await fetch(`${App.config.workerUrl}/api/search?q=${encodeURIComponent(q)}`); return await r.json(); } catch (e) { return []; } },
+            fetchCarouselSettingsIfNeeded: async () => { if (!App.state.carouselSettings) try { const r = await fetch(`${App.config.workerUrl}/api/carousel-settings`); App.state.carouselSettings = await r.json(); } catch (e) {} },
             handleSearchSubmit: (e) => { e.preventDefault(); const q = e.target.querySelector('[name="query"]').value.trim(); if (q) window.location.hash = `#/search/${encodeURIComponent(q)}`; },
             handleCommentSubmit: async (e, slug) => { e.preventDefault(); const f=e.target, n=f.nickname.value.trim(), c=f.content.value.trim(); if (!n||!c) { alert('昵称和内容不能为空!'); return; } try { const r=await fetch(`${App.config.workerUrl}/api/comments/${slug}`, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ nickname:n, content:c }) }); if (!r.ok) throw new Error('评论失败'); f.reset(); await App.fetchCommentsForPost(slug); App.router(); } catch (e) { alert('评论提交失败，请稍后再试。'); } },
 
@@ -178,7 +199,8 @@
                 mainLayout: (content) => `<div class="flex-grow">${App.templates.header()}<div class="max-w-7xl mx-auto w-full px-4 sm:px-6 lg:px-8"><main class="flex flex-col lg:flex-row gap-[23px] py-8"><div class="w-full lg:w-3/4">${content}</div>${App.templates.sidebar()}</main>${App.templates.friendlyLinksSection()}</div></div>${App.templates.footer()}`,
                 carousel: () => {
                     const images = [ 'https://placehold.co/1200x230/3b82f6/ffffff?text=Banner+1', 'https://placehold.co/1200x230/ef4444/ffffff?text=Banner+2', 'https://placehold.co/1200x230/22c55e/ffffff?text=Banner+3' ];
-                    return `<div id="carousel-container" class="relative w-full h-[230px] overflow-hidden rounded-lg shadow-lg">${images.map((src, i)=>`<div class="carousel-slide absolute w-full h-full transition-opacity duration-700 ease-in-out ${i===0?'opacity-100':'opacity-0'}" style="opacity: ${i===0?1:0};"><img src="${src}" class="w-full h-full object-cover" alt="Carousel Image ${i+1}"></div>`).join('')}<button id="carousel-prev" class="absolute top-1/2 left-4 -translate-y-1/2 bg-black/30 text-white rounded-full w-10 h-10 flex items-center justify-center hover:bg-black/50"><i class="fas fa-chevron-left"></i></button><button id="carousel-next" class="absolute top-1/2 right-4 -translate-y-1/2 bg-black/30 text-white rounded-full w-10 h-10 flex items-center justify-center hover:bg-black/50"><i class="fas fa-chevron-right"></i></button><div class="absolute bottom-4 left-1/2 -translate-x-1/2 flex space-x-2">${images.map((_,i)=>`<button class="carousel-dot h-3 w-3 rounded-full bg-white/50" data-slide-to="${i}"></button>`).join('')}</div></div>`;
+                    const settings = App.state.carouselSettings || { transition: 'fade' };
+                    return `<div id="carousel-container" class="relative w-full h-[230px] overflow-hidden rounded-lg shadow-lg">${images.map((src, i)=>`<div class="carousel-slide absolute w-full h-full" style="transition-property: opacity, transform; transition-duration: var(--carousel-speed, 700ms); transition-timing-function: ease-in-out; opacity: ${i===0?1:0}; transform: ${settings.transition === 'slide-x' && i !== 0 ? 'translateX(100%)' : (settings.transition === 'slide-y' && i !== 0 ? 'translateY(100%)' : 'none')};"><img src="${src}" class="w-full h-full object-cover" alt="Carousel Image ${i+1}"></div>`).join('')}<button id="carousel-prev" class="absolute top-1/2 left-4 -translate-y-1/2 bg-black/30 text-white rounded-full w-10 h-10 flex items-center justify-center hover:bg-black/50"><i class="fas fa-chevron-left"></i></button><button id="carousel-next" class="absolute top-1/2 right-4 -translate-y-1/2 bg-black/30 text-white rounded-full w-10 h-10 flex items-center justify-center hover:bg-black/50"><i class="fas fa-chevron-right"></i></button><div class="absolute bottom-4 left-1/2 -translate-x-1/2 flex space-x-2">${images.map((_,i)=>`<button class="carousel-dot h-3 w-3 rounded-full ${i===0?'bg-white':'bg-white/50'}" data-slide-to="${i}"></button>`).join('')}</div></div>`;
                 },
                 homePage: (posts, title = "最新文章") => {
                     return `${App.templates.carousel()}<div class="mt-[18px]"><h1 class="text-[1.3rem] font-bold mb-2">${title}</h1><div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700"><div class="divide-y divide-gray-200 dark:divide-gray-700">${posts.length>0?posts.map(p=>App.templates.postCard(p)).join(''):'<p class="p-6">没有找到相关文章。</p>'}</div></div></div>`;
@@ -194,12 +216,7 @@
                             <div class="flex justify-between items-center text-xs text-gray-500 dark:text-gray-400 mt-2"><span>${new Date(post.date).toLocaleDateString()}</span><div class="flex items-center gap-1"><i class="fas fa-eye"></i><span>${post.views || 0}</span></div></div>
                         </div>
                     </div>`,
-                postPage: (post) => {
-                    if (!post) return App.templates.notFoundPage();
-                    const commentsHtml = App.templates.commentsSection(post.slug);
-                    const commentFormHtml = App.templates.commentForm(post.slug);
-                    return ` <article class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700"> <div class="flex items-center text-sm text-gray-500 dark:text-gray-400 mb-4"><a href="#/category/${encodeURIComponent(post.category)}" class="bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full text-xs font-semibold">${post.category}</a><span class="mx-2">&middot;</span><span>发布于 ${new Date(post.date).toLocaleDateString()}</span><span class="mx-2">&middot;</span><div class="flex items-center gap-1"><i class="fas fa-eye"></i><span>${post.views || 0}</span></div></div> <h1 class="text-3xl sm:text-4xl font-bold mb-6">${post.title}</h1> ${post.imageUrl ? `<img src="${post.imageUrl}" alt="${post.title}" class="w-full rounded-lg mb-8">` : ''} <div class="content-area">${post.content}</div> <div class="mt-8 pt-4 border-t dark:border-gray-700 flex flex-wrap gap-2">${ (post.tags && post.tags.length > 0) ? '<span class="font-semibold">标签:</span>' : '' }${ (post.tags || []).map(tag => `<a href="#/tag/${encodeURIComponent(tag)}" class="bg-gray-100 dark:bg-gray-700 text-sm px-3 py-1 rounded-md hover:bg-gray-200 dark:hover:bg-gray-600">${tag}</a>`).join('')}</div> </article> ${commentsHtml} ${commentFormHtml} `;
-                },
+                postPage: (post) => { if (!post) return App.templates.notFoundPage(); const commentsHtml = App.templates.commentsSection(post.slug); const commentFormHtml = App.templates.commentForm(post.slug); return ` <article class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700"> <div class="flex items-center text-sm text-gray-500 dark:text-gray-400 mb-4"><a href="#/category/${encodeURIComponent(post.category)}" class="bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full text-xs font-semibold">${post.category}</a><span class="mx-2">&middot;</span><span>发布于 ${new Date(post.date).toLocaleDateString()}</span><span class="mx-2">&middot;</span><div class="flex items-center gap-1"><i class="fas fa-eye"></i><span>${post.views || 0}</span></div></div> <h1 class="text-3xl sm:text-4xl font-bold mb-6">${post.title}</h1> ${post.imageUrl ? `<img src="${post.imageUrl}" alt="${post.title}" class="w-full rounded-lg mb-8">` : ''} <div class="content-area">${post.content}</div> <div class="mt-8 pt-4 border-t dark:border-gray-700 flex flex-wrap gap-2">${ (post.tags && post.tags.length > 0) ? '<span class="font-semibold">标签:</span>' : '' }${ (post.tags || []).map(tag => `<a href="#/tag/${encodeURIComponent(tag)}" class="bg-gray-100 dark:bg-gray-700 text-sm px-3 py-1 rounded-md hover:bg-gray-200 dark:hover:bg-gray-600">${tag}</a>`).join('')}</div> </article> ${commentsHtml} ${commentFormHtml} `; },
                 commentForm: (slug) => `<div class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700 mt-8"><h3 class="text-xl font-semibold mb-4">发表评论</h3><form onsubmit="App.handleCommentSubmit(event, '${slug}')"><div class="mb-4"><label for="nickname">昵称</label><input type="text" id="nickname" name="nickname" required class="w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="mb-4"><label for="content">评论内容</label><textarea id="content" name="content" rows="4" required class="w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></textarea></div><div class="text-right"><button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">提交</button></div></form></div>`,
                 commentsSection: (slug) => { const comments = App.state.comments[slug] || []; return ` <div class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700 mt-8"> <h3 class="text-xl font-semibold mb-4">评论 (${comments.length})</h3> <div class="space-y-6"> ${comments.length > 0 ? comments.map(c => `<div class="flex items-start gap-4"><div class="w-10 h-10 rounded-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center font-bold text-gray-500 dark:text-gray-400 text-lg flex-shrink-0">${c.nickname.charAt(0)}</div><div><div class="flex items-baseline gap-2"><p class="font-semibold">${c.nickname}</p><p class="text-xs text-gray-400">${new Date(c.date).toLocaleString()}</p></div><p class="mt-1">${c.content}</p></div></div>`).join('') : '<p class="text-gray-500 dark:text-gray-400">还没有评论。</p>'} </div> </div> `; },
                 loader: () => `<div class="flex justify-center items-center py-20"><div class="loader"></div></div>`,
