--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,6 @@
                 posts: [], navItems: [], friendlyLinks: [], recentComments: [], siteStats: null, categories: {},
                 authToken: localStorage.getItem('authToken'), editorInstance: null, carouselSettings: null
             },
-
             init() {
                 if (localStorage.getItem('theme') === 'dark') document.documentElement.classList.add('dark');
                 this.router();
@@ -107,11 +106,7 @@
                 const container = document.getElementById('carousel-slide-list');
                 const div = document.createElement('div');
                 div.className = 'carousel-slide-row grid grid-cols-12 gap-2';
-                div.innerHTML = `
-                    <input type="url" name="imageUrl" placeholder="图片 URL" class="col-span-6 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
-                    <input type="url" name="linkUrl" placeholder="超链接 URL" class="col-span-5 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
-                    <button type="button" onclick="App.removeCarouselSlideRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md col-span-1">-</button>
-                `;
+                div.innerHTML = `<input type="url" name="imageUrl" placeholder="图片 URL" class="col-span-6 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><input type="url" name="linkUrl" placeholder="超链接 URL" class="col-span-5 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><button type="button" onclick="App.removeCarouselSlideRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md col-span-1">-</button>`;
                 container.appendChild(div);
             },
             removeCarouselSlideRow: (button) => {
@@ -169,52 +164,11 @@
                 siteSettingsEditor: () => { const stats = App.state.siteStats || {}; return `<div class="w-full"><h2 class="text-xl font-semibold mb-6">网站设置</h2><form onsubmit="App.handleStatsFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow space-y-4"><h3 class="text-lg font-medium">联系方式</h3><div><label for="contact_email" class="block text-sm font-medium">联系邮箱</label><input type="email" id="contact_email" name="contact_email" value="${stats.contact_email || ''}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="contact_github" class="block text-sm font-medium">GitHub 地址</label><input type="url" id="contact_github" name="contact_github" value="${stats.contact_github || ''}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><h3 class="text-lg font-medium pt-4 border-t dark:border-gray-700">网站统计基数</h3><p class="text-sm text-gray-500">这里设置的值将作为统计的基数。</p><div><label for="posts_total" class="block text-sm font-medium">文章总数</label><input type="number" id="posts_total" name="posts_total" value="${stats.posts_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="categories_total" class="block text-sm font-medium">分类总数</label><input type="number" id="categories_total" name="categories_total" value="${stats.categories_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="comments_total" class="block text-sm font-medium">评论总数</label><input type="number" id="comments_total" name="comments_total" value="${stats.comments_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存设置</button></div></form></div>`;},
                 carouselSettingsEditor: () => {
                     const settings = App.state.carouselSettings || { transition: 'fade', speed: 700, delay: 5000, slides: [] };
-                    return `<div class="w-full">
-                        <h2 class="text-xl font-semibold mb-6">海报轮播设置</h2>
-                        <form onsubmit="App.handleCarouselSettingsSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow space-y-6">
-                            <div>
-                                <label for="transition" class="block text-sm font-medium">过渡动效</label>
-                                <select id="transition" name="transition" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
-                                    <option value="fade" ${settings.transition === 'fade' ? 'selected' : ''}>渐变 (Fade)</option>
-                                    <option value="slide-x" ${settings.transition === 'slide-x' ? 'selected' : ''}>水平滑动 (Slide X)</option>
-                                    <option value="slide-y" ${settings.transition === 'slide-y' ? 'selected' : ''}>垂直滑动 (Slide Y)</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label for="speed" class="block text-sm font-medium">动效速度 (毫秒)</label>
-                                <input type="number" id="speed" name="speed" value="${settings.speed}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
-                            </div>
-                            <div>
-                                <label for="delay" class="block text-sm font-medium">自动播放间隔 (毫秒)</label>
-                                <input type="number" id="delay" name="delay" value="${settings.delay}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
-                            </div>
-
-                            <div class="border-t border-gray-200 dark:border-gray-700 pt-6">
-                                <h3 class="text-lg font-medium mb-4">幻灯片管理</h3>
-                                <div class="grid grid-cols-12 gap-2 mb-2 text-sm font-semibold">
-                                    <div class="col-span-6">图片 URL</div>
-                                    <div class="col-span-5">超链接 URL</div>
-                                </div>
-                                <div id="carousel-slide-list" class="space-y-2 mb-4">
-                                    ${(settings.slides || []).map(slide => `
-                                        <div class="carousel-slide-row grid grid-cols-12 gap-2">
-                                            <input type="url" name="imageUrl" placeholder="图片 URL" value="${slide.imageUrl}" class="col-span-6 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
-                                            <input type="url" name="linkUrl" placeholder="超链接 URL" value="${slide.linkUrl}" class="col-span-5 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
-                                            <button type="button" onclick="App.removeCarouselSlideRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md col-span-1">-</button>
-                                        </div>
-                                    `).join('')}
-                                </div>
-                                <button type="button" onclick="App.addCarouselSlideRow()" class="text-sm bg-gray-200 dark:bg-gray-700 py-2 px-4 rounded-md">+ 添加幻灯片</button>
-                            </div>
-
-                            <div class="text-right border-t border-gray-200 dark:border-gray-700 pt-6 mt-6">
-                                <button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存设置</button>
-                            </div>
-                        </form>
-                    </div>`;
+                    return `<div class="w-full"><h2 class="text-xl font-semibold mb-6">海报轮播设置</h2><form onsubmit="App.handleCarouselSettingsSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow space-y-6"><div><label for="transition" class="block text-sm font-medium">过渡动效</label><select id="transition" name="transition" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><option value="fade" ${settings.transition === 'fade' ? 'selected' : ''}>渐变 (Fade)</option><option value="slide-x" ${settings.transition === 'slide-x' ? 'selected' : ''}>水平滑动 (Slide X)</option><option value="slide-y" ${settings.transition === 'slide-y' ? 'selected' : ''}>垂直滑动 (Slide Y)</option></select></div><div><label for="speed" class="block text-sm font-medium">动效速度 (毫秒)</label><input type="number" id="speed" name="speed" value="${settings.speed}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="delay" class="block text-sm font-medium">自动播放间隔 (毫秒)</label><input type="number" id="delay" name="delay" value="${settings.delay}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="border-t border-gray-200 dark:border-gray-700 pt-6"><h3 class="text-lg font-medium mb-4">幻灯片管理</h3><div class="grid grid-cols-12 gap-2 mb-2 text-sm font-semibold"><div class="col-span-6">图片 URL</div><div class="col-span-5">超链接 URL</div></div><div id="carousel-slide-list" class="space-y-2 mb-4">${(settings.slides || []).map(slide => `<div class="carousel-slide-row grid grid-cols-12 gap-2"><input type="url" name="imageUrl" placeholder="图片 URL" value="${slide.imageUrl}" class="col-span-6 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><input type="url" name="linkUrl" placeholder="超链接 URL" value="${slide.linkUrl}" class="col-span-5 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><button type="button" onclick="App.removeCarouselSlideRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md col-span-1">-</button></div>`).join('')}</div><button type="button" onclick="App.addCarouselSlideRow()" class="text-sm bg-gray-200 dark:bg-gray-700 py-2 px-4 rounded-md">+ 添加幻灯片</button></div><div class="text-right border-t border-gray-200 dark:border-gray-700 pt-6 mt-6"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存设置</button></div></form></div>`;
                 }
             }
         };
+        
         App.init();
     </script>
 </body>
