--- a/admin.html
+++ b/admin.html
@@ -33,6 +33,7 @@
                 posts: [], navItems: [], friendlyLinks: [], recentComments: [], siteStats: null, categories: {},
                 authToken: localStorage.getItem('authToken'), editorInstance: null, carouselSettings: null
             },
+
             init() {
                 if (localStorage.getItem('theme') === 'dark') document.documentElement.classList.add('dark');
                 this.router();
@@ -106,7 +107,11 @@
                 const container = document.getElementById('carousel-slide-list');
                 const div = document.createElement('div');
                 div.className = 'carousel-slide-row grid grid-cols-12 gap-2';
-                div.innerHTML = `<input type="url" name="imageUrl" placeholder="图片 URL" class="col-span-6 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><input type="url" name="linkUrl" placeholder="超链接 URL" class="col-span-5 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><button type="button" onclick="App.removeCarouselSlideRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md col-span-1">-</button>`;
+                div.innerHTML = `
+                    <input type="url" name="imageUrl" placeholder="图片 URL" class="col-span-6 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
+                    <input type="url" name="linkUrl" placeholder="超链接 URL" class="col-span-5 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">
+                    <button type="button" onclick="App.removeCarouselSlideRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md col-span-1">-</button>
+                `;
                 container.appendChild(div);
             },
             removeCarouselSlideRow: (button) => {
@@ -143,7 +148,7 @@
             },
             
             templates: {
-                loginPage: () => `<div class="min-h-screen flex items-center justify-center"><div class="max-w-md w-full bg-white dark:bg-gray-800 p-8 rounded-lg shadow-md"><h2 class="text-2xl font-bold text-center mb-6">管理员登录</h2><form onsubmit="App.handleLogin(event)"><div class="mb-4"><label for="username">用户名</label><input type="text" id="username" name="username" required class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="mb-6"><label for="password">密码</label><input type="password" id="password" name="password" required class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white rounded">登录</button></form></div></div>`,
+                loginPage: () => `<div class="min-h-screen flex items-center justify-center"><div class="max-w-md w-full bg-white dark:bg-gray-800 p-8 rounded-lg shadow-md"><h2 class="text-2xl font-bold text-center mb-6">管理员登录</h2><form onsubmit="App.handleLogin(event)"><div class="mb-4"><label for="username" class="block text-sm font-medium">用户名</label><input type="text" id="username" name="username" required class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="mb-6"><label for="password" class="block text-sm font-medium">密码</label><input type="password" id="password" name="password" required class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white rounded">登录</button></form></div></div>`,
                 adminDashboard: () => `<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"><header class="flex justify-between items-center pb-4 border-b border-gray-200 dark:border-gray-700 mb-8"><h1 class="text-2xl font-bold">管理后台</h1><div><a href="index.html" class="text-blue-500 hover:underline mr-4">返回博客</a><button onclick="App.handleLogout()" class="bg-red-500 text-white py-2 px-4 rounded">退出</button></div></header><div class="flex gap-8"><aside class="w-1/5"><ul class="space-y-2"><li><button onclick="App.showView('posts')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">文章管理</button></li><li><button onclick="App.showView('nav')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">导航设置</button></li><li><button onclick="App.showView('links')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">友链管理</button></li><li><button onclick="App.showView('comments')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">评论管理</button></li><li><button onclick="App.showView('carousel')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">海报轮播</button></li><li><button onclick="App.showView('settings')" class="w-full text-left font-semibold p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">网站设置</button></li></ul></aside><main id="admin-content" class="w-4/5">${App.templates.postManager()}</main></div></div>`,
                 postManager: () => `<div class="w-full"><div class="flex justify-between items-center mb-6"><h2 class="text-xl font-semibold">文章列表</h2><button onclick="App.showView('editor')" class="bg-blue-500 text-white py-2 px-4 rounded-md">撰写新文章</button></div><div class="bg-white dark:bg-gray-800 shadow rounded-lg overflow-x-auto"><table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700"><thead><tr><th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">标题</th><th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">分类</th><th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">日期</th><th class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">操作</th></tr></thead><tbody class="bg-white dark:bg-gray-800 divide-y divide-gray-200 dark:divide-gray-700">${App.state.posts.map(p => `<tr><td class="px-6 py-4 whitespace-nowrap">${p.title}</td><td class="px-6 py-4 whitespace-nowrap">${p.category}</td><td class="px-6 py-4 whitespace-nowrap">${new Date(p.date).toLocaleDateString()}</td><td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium"><button onclick="App.showView('editor', '${p.slug}')" class="text-indigo-600 hover:text-indigo-900 dark:text-indigo-400 dark:hover:text-indigo-200">编辑</button><button onclick="App.deletePost('${p.slug}')" class="text-red-600 hover:text-red-900 dark:text-red-400 dark:hover:text-red-200 ml-4">删除</button></td></tr>`).join('')}</tbody></table></div></div>`,
                 postEditor: (post = {}) => {
@@ -168,7 +173,6 @@
                 }
             }
         };
-        
         App.init();
     </script>
 </body>
